# dev.scanimage

./: .gitignore  .npmignore  CLEANUP_SUMMARY.md  CMakeLists.txt  QUICKSTART.md  README.md  binding.gyp  demo.js  implementation-plan  index.d.ts  index.js  package-lock.json  package.json  signatures.json  signatures_v2.json  task
docs/: API.md  BUILD.md  GO.md  NODE_FFI.md  PYTHON.md  RUST.md  STRUCTURE.md
examples/: express-server.js  typescript-usage.ts
include/: config.h  file_io.h  image_scanner.h  safeimg_export.h  scan_result_v2.h  scanner_v2.h
include/internal/: base_validator.h  config.h  entropy_analyzer.h  exif_parser.h  false_positive_reducer.h  gif_validator.h  scanner_v2.h  signature_engine_v2.h  svg_validator.h  xmp_parser.h
include/metadata/: exif_parser.h  false_positive_reducer.h  signature_engine_v2.h  xmp_parser.h
include/validators/: base_validator.h  bmp_validator.h  jpeg_validator.h  png_validator.h  tiff_validator.h  webp_validator.h
src/: entropy_analyzer.cpp  file_io.cpp  image_scanner.cpp  node_bindings.cpp  safeimg_export.cpp  scan_result_v2.cpp  scanner_v2.cpp
src/api/: safeimg_export.cpp
src/core/: entropy_analyzer.cpp  exif_parser.cpp  file_io.cpp  image_scanner.cpp  scan_result_v2.cpp  scanner_v2.cpp  xmp_parser.cpp
src/core/validators/: bmp_validator.cpp  gif_validator.cpp  jpeg_validator.cpp  png_validator.cpp  svg_validator.cpp  tiff_validator.cpp  webp_validator.cpp
src/metadata/: exif_parser.cpp  false_positive_reducer.cpp  signature_engine_v2.cpp  xmp_parser.cpp
src/signatures/: false_positive_reducer.cpp  signature_engine_v2.cpp
src/validators/: bmp_validator.cpp  gif_validator.cpp  jpeg_validator.cpp  png_validator.cpp  svg_validator.cpp  tiff_validator.cpp  webp_validator.cpp
test/: test-signatures.js  test-v15.js  test.js  test_c_api  test_c_api.c  test_signature_v2  test_signature_v2.cpp  test_xmp.js
test/sig_test_files/: my_signatures.json
test/signatures/: custom.json  no_sigs.json
test/v15_test_files/: test.tif
